--- a/pos-java-maven-hibernate/pom.xml
+++ b/pos-java-maven-hibernate/pom.xml
@@ -61,6 +61,12 @@
     <scope>compile</scope>
 </dependency>
 
+<dependency>
+    <groupId>org.primefaces</groupId>
+    <artifactId>primefaces</artifactId>
+    <version>11.0.0</version>
+</dependency>
+
 
 
 
