--- a/pos-java-maven-hibernate/pom.xml
+++ b/pos-java-maven-hibernate/pom.xml
@@ -67,6 +67,12 @@
     <version>11.0.0</version>
 </dependency>
 
+<!-- https://mvnrepository.com/artifact/com.google.code.gson/gson -->
+<dependency>
+    <groupId>com.google.code.gson</groupId>
+    <artifactId>gson</artifactId>
+    <version>2.8.9</version>
+</dependency>
 
 
 
